tests/ui/transmute/ambiguity-in-closure-arg.stderr
error[E0282]: type annotations needed
  --> $DIR/ambiguity-in-closure-arg.rs:6:14
   |
LL |     unsafe { std::mem::transmute::<_, ()>(|o_b: Unconstrained<_>| {}) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for fn item `unsafe extern "rust-intrinsic" fn({closure@$DIR/ambiguity-in-closure-arg.rs:6:43: 6:66}) {transmute::<{closure@$DIR/ambiguity-in-closure-arg.rs:6:43: 6:66}, ()>}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
